# rust-base

./: .env.example  .gitignore  .gitmodules  .ignore  .rustfmt.toml  .service  Cargo.toml  Makefile
.cargo/: config.toml
app-base/: Cargo.toml
app-base/examples/: example1.rs
app-base/src/: ini.rs  lib.rs
app-macros/: Makefile
app-macros/tests/: app-macros-test1.rs
assets/site/html/layouts/: _head.html  ajax.html  empty.html
assets/site/html/pages/index/: index.html
config/: app.ini  postgresql.auto.conf  postgrest.conf
crates/app/: Cargo.toml  Makefile  build.rs  cbindgen.toml
crates/app-async/: Cargo.toml  Makefile
crates/app-async/examples/: app-async-actix_on_tokio_start.rs  app-async-example.rs  app-async-example1.rs  app-http-server-example.rs
crates/app-async/src/: async_runtime.rs  config.rs  lib.rs  runtime.rs  tokio_config.rs
crates/app-async/src/cache/: cache_array.rs  cache_trait.rs  cacher.rs  mod.rs
crates/app-async/src/db/: config.rs  db_config.rs  db_config_app.rs  db_notify_listener.rs  db_pool.rs  mod.rs  pool.rs
crates/app-async/src/http_server/: config.rs  http_server.rs  mod.rs
crates/app-async/src/queue/: mod.rs  queue_handler.rs  queue_listener.rs  queue_task.rs
crates/app-async/tests/: config.rs  tests_http_server.rs
crates/app-async/tests/common/: config.rs
crates/app-base/: Cargo.toml  Makefile  build.rs  cbindgen.toml
crates/app-base/benches/: bench_stdlib.rs
crates/app-base/examples/: app-base-example.c  app-base-example.rs  app-base-example1.rs  app-base-module-example.c
crates/app-base/include/: bindings.rs  libapp_base.h
crates/app-base/src/: args.rs  base.rs  base_config.rs  binds.rs  cmd.rs  config.rs  convert.rs  di.rs  dirs.rs  env.rs  ini.rs  lib.rs  log.rs  log_config.rs  logger.rs  macros.rs  mem_stats.rs  no_std.rs  prelude.rs
crates/app-base/src/app/: app.rs  app_c.rs  app_config.rs  app_config_custom.rs  app_config_module.rs  app_module.rs  app_simple_config.rs  app_simple_module.rs  mod.rs
crates/app-base/src/config/: base.rs  base_config.rs  log.rs  log_config.rs  mod.rs
crates/app-base/src/filters/: mod.rs  phone.rs  string.rs
crates/app-base/src/serde/: merge.rs  mod.rs  phone.rs  string.rs
crates/app-base/tests/: test_app_config.rs  test_dirs.rs  test_env.rs  test_filters.rs  tests_dirs.rs  tests_env.rs
crates/app-desktop/: Cargo.toml
crates/app-desktop/src/: desktop_config.rs  desktop_module.rs  lib.rs
crates/app-macros/: Cargo.toml  Makefile
crates/app-macros/src/: extend.rs  from_static.rs  lib.rs  set_from_iter.rs  struct_fields.rs
crates/app-macros/tests/: app-macros-test1.rs  test_macro_expand.rs  test_struct_fields.rs
crates/app-migrator/: Cargo.toml  Makefile
crates/app-migrator/src/: app_migrator_module.rs  file_meta.rs  lib.rs  migrator.rs  migrator_config.rs  migrator_module.rs  node_info.rs  phantom.rs  queries.rs  row.rs  scan.rs  sorter.rs  wrapper.rs
crates/app-testing/: Cargo.toml  Makefile
crates/app-testing/src/: async_bench.rs  lib.rs  macros.rs  test.rs  test_transaction.rs
crates/app-testing/tests/: app-testing-tests.rs
crates/app-testing/tests/common/: mod.rs
crates/app-web/: Cargo.toml  Makefile
crates/app-web/examples/: app-web-http-server-example.rs
crates/app-web/src/: lib.rs  web_config.rs  web_module.rs
crates/app-web/src/html_render/: html_render.rs  html_render_config.rs  html_render_context.rs  mod.rs
crates/app-web/src/html_render/modules/: mod.rs  utils.rs
crates/app-web/src/http_server/: actix_config.rs  http_server.rs  mod.rs  response.rs  web_config.rs
crates/app-web/src/http_server/api/: api_config.rs  api_postgrest.rs  mod.rs
crates/app-web/src/http_server/ext/: auth_config.rs  auth_form.rs  auth_token.rs  current_user.rs  db_web.rs  firewall_config.rs  jwt_config.rs  jwt_encoder.rs  jwt_token.rs  mod.rs  recaptcha.rs  request.rs  response.rs  ws.rs
crates/app-web/src/http_server/middleware/: auth_header.rs  auth_required.rs  auth_role.rs  cache_control.rs  content_type.rs  cors.rs  mod.rs  no_cache.rs
crates/app-web/tests/: test_err_http.rs  test_web_http_server.rs  tests_web_http_server.rs
crates/app-web/tests/common/: mod.rs
crates/app/examples/: app-example.c  app-example.rs  app-example1.rs
crates/app/include/: libapp.h
crates/app/src/: app.rs  app_config.rs  app_config_module.rs  app_module.rs  app_options.rs  boot.rs  config.rs  config_no_std.rs  http_server.rs  http_server_configurator.rs  http_server_module.rs  lib.rs  main.rs  main_config.rs  main_module.rs  options.rs
crates/app/tests/: test_config.rs  test_http_server.rs  tests_app.rs  tests_app_config.rs  tests_app_http_server.rs  tests_config.rs
crates/app/tests/common/: mod.rs
include/: libapp.h  libapp_base.h
migrations/base/: crontab.sql  finish.@.sql
migrations/base/api/: api_debug_request.sql
migrations/base/app/: app_config.sql  app_config_setup.@.sql  app_converts.sql  app_helpers.sql  app_jsons.sql  app_operators.sql  app_plpgsql_check_schema.sql  app_raise.sql
migrations/base/app/queue/: app_queue.down.sql  app_queue.sql  app_queue_config_setup.sql  app_queue_functions.sql  app_queue_task_state.down.sql  app_queue_task_state.sql  app_queue_triggers.sql
migrations/base/app/triggers/: deleted_at_trigger.sql  forbidden_trigger.sql  updated_at_trigger.sql
migrations/base/auth/: auth.sql
migrations/base/db/: db_extensions.sql  db_roles.down.sql  db_roles.sql  db_schemes.down.sql  db_schemes.sql
migrations/base/postgrest/: postgrest.sql
