[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]
exclude = []

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["Drachenko Viktor"]
description = "The base components suite"

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "fat"
overflow-checks = true
rpath = true

[profile.release]
opt-level = 3
strip = "debuginfo"
#strip = "symbols"
lto = "thin"
codegen-units = 1
overflow-checks = true
rpath = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = false
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
debug = false
strip = "symbols"

[workspace.lints.rust]
#unsafe_code = "forbid"
async_fn_in_trait = "allow"
hidden_glob_reexports = "allow"

[workspace.lints.clippy]
bool_comparison = "allow"
bool_assert_comparison = "allow"
needless_return = "allow"
expect_fun_call = "allow"
await_holding_lock = "allow"
question_mark = "allow"
new_without_default = "allow"
redundant_field_names = "allow"
await_holding_refcell_ref = "allow"
missing_safety_doc = "allow"
module_inception = "allow"
field_reassign_with_default = "allow"
assigning_clones = "allow"
legacy_numeric_constants = "allow"
unit_arg = "allow"
from_over_into = "allow"

[workspace.dependencies]
libc = { version = "0.2", default-features = false }
libc_alloc = { version = "1.0" }
libc-print = { version = "0.1" }
cc = { version = "1.2" }
bindgen = { version = "0.71" }
cbindgen = { version = "0.28" }
log = { version = "0.4" }
dotenv = { version = "0.15" }
base64 = { version = "0.22.1", default-features = false }
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"
ahash = { version = "=0.8.10", default-features = false }
dashmap = { version = "6.1", features = ["serde"] }
rayon = { version = "1.11.0" }
indexmap = { version = "2.9.0", default-features = false, features = ["serde"] }
yansi = { version = "1.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "rc",
  "alloc",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
memory-stats = { version = "1.2.0" }
accessory = { version = "2.1.0" }
criterion = { version = "0.6.0", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
actix = { version = "0" }
actix-web = { version = "4", features = ["secure-cookies", "rustls"] }
actix-web-test = { version = "0.0.1" }
actix-http = { version = "3", features = ["http2", "ws", "compress-zstd"] }
actix-rt = { version = "2.10" }
actix-files = { version = "0.6" }
actix-test = { version = "0.1" }
actix-cors = { version = "0.7" }
actix-ws = { version = "0" }
actix-web-grants = { version = "3" }
actix-multipart = { version = "0.7" }
actix-multipart-derive = { version = "0.7" }
actix-multipart-rfc7578 = { version = "0.10" }
jsonwebtoken = { version = "9" }
futures = { version = "0.3" }
futures-io = { version = "0.3" }
futures-channel = { version = "0.3" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3", features = [
  "alloc",
  "channel",
  "io",
  "sink",
] }
futures-lite = { version = "2.6" }
time = { version = "0.3.43" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
regex = { version = "1.11", features = ["std"] }
rand = { version = "0.9" }
itoa = { version = "1.0.15" }
tera = { version = "1.20.0" }
flate2 = { version = "1.1.2", features = ["zlib"], default-features = false }
bytes = { version = "1.4" }
crc = { version = "3.0" }
sha2 = { version = "0.10" }
md5 = { version = "0.7", default-features = false }
digest = { version = "0.10" }
urlencoding = { version = "2.1" }
url = { version = "2.5.4", features = ["serde"] }
trim-in-place = { version = "0.1.7" }
heck = { version = "0.5" }
any_ascii = { version = "0.3" }
glob = { version = "0.3" }
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "cookies",
  "socks",
  "deflate",
  "gzip",
] }
curl = { version = "0.4" }
impls = { version = "1.0.3" }
struct-field-names-as-array = { version = "0.3.0" }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-native-tls",
  "macros",
  "migrate",
  "postgres",
  "sqlite",
  "json",
  "uuid",
  "chrono",
  "time",
  "bigdecimal",
  "regexp",
  "ipnetwork",
  "bit-vec",
] }
sqlx-core = { version = "0.8" }
sqlx-postgres = { version = "0.8" }
sqlx-sqlite = { version = "0.8" }
pg_query = { version = "6.1.1" }
validator = { version = "0.20", features = ["derive"] }

app = { path = "crates/app", default-features = false }
app-base = { path = "crates/app-base", default-features = false }
app-macros = { path = "crates/app-macros", default-features = false }
app-async = { path = "crates/app-async", default-features = false }
app-migrator = { path = "crates/app-migrator", default-features = false }
app-web = { path = "crates/app-web", default-features = false }
app-testing = { path = "crates/app-testing", default-features = false }
