[package]
name = "app-async"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app_async"
crate-type = ["lib"]

[features]
default = ["db"]
db = ["dep:sqlx", "dep:futures"]

[dependencies]
app-base = { workspace = true, features = ["std"] }
tokio = { workspace = true }
actix = { workspace = true }
log = { workspace = true }
futures = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
