[package]
name = "app-async"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app_async"
crate-type = ["lib"]

[features]
default = ["db"]
db = ["dep:sqlx", "dep:futures"]

[dependencies]
app-base = { workspace = true, features = ["std"] }
tokio = { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
dashmap = { workspace = true }
itoa = { workspace = true }

[dev-dependencies]
app = { workspace = true, features = ["db"] }
app-testing = { workspace = true }
