[package]
name = "app-base"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app_base"
crate-type = ["lib"]

[[example]]
name = "app-base-example1"
path = "examples/app-base-example1.rs"

[features]
default = ["std"]
std = ["app-macros/std", "dep:memory-stats", "base64/std", "md5/std"]

[build-dependencies]
cc = { workspace = true }
bindgen = { workspace = true }
cbindgen = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }

[dependencies]
app-macros = { workspace = true }
libc = { workspace = true }
libc_alloc = { workspace = true }
libc-print = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true }
yansi = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memory-stats = { workspace = true, optional = true }
base64 = { workspace = true }
trim-in-place = { workspace = true }
md5 = { workspace = true }
heck = { workspace = true }
any_ascii = { workspace = true }

[dev-dependencies]
