[package]
name = "app-web"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app_web"
crate-type = ["lib"]

[features]
default = []

[dependencies]
app-base = { workspace = true }
app-async = { workspace = true }
tokio = { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
actix-http = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
dashmap = { workspace = true }
itoa = { workspace = true }

[dev-dependencies]
app = { workspace = true, features = ["db"] }
app-testing = { workspace = true }
