[package]
name = "app-web"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app_web"
crate-type = ["lib"]

[features]
default = []

[dependencies]
app-base = { workspace = true }
app-async = { workspace = true }
tokio = { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
actix-http = { workspace = true }
actix-cors = { workspace = true }
validator = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
itoa = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
accessory = { workspace = true }

[dev-dependencies]
app-testing = { workspace = true }
