[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app"
crate-type = ["lib"]

[[bin]]
path = "src/main.rs"
name = "app"

#[[bin]]
#path = "src/main_config.rs"
#name = "app_config"

[features]
default = ["std", "db"]
std = [
  "app-base/std",
  "app-macros/std",
  "dep:app-async",
  "dep:app-web",
  "dep:tokio",
  "dep:actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:actix-multipart",
  "dep:actix-web-grants",
  "dep:futures",
]
db = ["std", "app-async/db", "dep:sqlx"]

[build-dependencies]
cc = { workspace = true }
bindgen = { workspace = true }
cbindgen = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }

[dependencies]
app-base = { workspace = true }
app-macros = { workspace = true }
app-async = { workspace = true, optional = true }
app-web = { workspace = true, optional = true }
libc = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true, optional = true }
actix = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-files = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }
actix-web-grants = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
app-testing = { workspace = true }
