[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "app"
crate-type = ["lib"]

[[bin]]
path = "src/main.rs"
name = "app"

[features]
default = ["std", "web", "migrator", "desktop"]
std = ["app-base/std", "dep:app-async", "dep:tokio", "dep:futures", "dep:sqlx"]
web = ["std", "dep:app-web", "dep:actix", "dep:actix-web", "dep:actix-http"]
migrator = ["std", "dep:app-migrator"]
desktop = ["std", "dep:app-web", "dep:app-desktop"]

[build-dependencies]
cc = { workspace = true }
bindgen = { workspace = true }
cbindgen = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }

[dependencies]
app-base = { workspace = true }
app-async = { workspace = true, optional = true, features = ["db"] }
app-web = { workspace = true, optional = true }
app-migrator = { workspace = true, optional = true }
app-desktop = { workspace = true, optional = true }
libc = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
actix = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-http = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
app-testing = { workspace = true }
